# EmbeddedAI

./: .gitignore  Makefile  README  README.md  Report.md  audio_provider.h  audio_provider_mock.cc  ecen5003_lab1.py  generate.sh  hello_world.cc  hello_world_float_model_data.cc  micro_model_settings.h  micro_speech_processor.h  pyproject.toml  resample_wavs.py
chkpoint1/: audio_processor.cc  audio_processor.h  micro_speech_processor.h  micro_speech_test.cc
chkpoint2/: Makefile  audio_processor.cc  micro_speech_processor.cc  micro_speech_processor.h
chkpoint3/: audio_processor.cc  main.cc  main_functions.cc  micro_speech_processor.cc
final-project/: .gitignore  README.md  pyproject.toml
final-project/docs/: report.md
final-project/hw/: Makefile  dump.vcd  model.sv  model.svh  results.xml  tb.gtkw  testbench.py
final-project/sw/: model.py
final-project/sw/artifacts/: binary_layer_manifest.json  bnn_hidden_bias.npy  bnn_hidden_bn_alpha.npy  bnn_hidden_bn_beta.npy  bnn_hidden_bn_mean.npy  bnn_hidden_bn_var.npy  bnn_hidden_comparison_sense.npy  bnn_hidden_popcount_threshold.npy  bnn_hidden_weights_bits.npy  bnn_hidden_weights_pm1.npy  bnn_logits_bias.npy  bnn_logits_weights_bits.npy  bnn_logits_weights_pm1.npy  digits_bnn.keras  golden_vectors.npz
final-project/sw/dataset/: digits.npz
hello_world/: hello_world_no_quant.tflite
model/: model.ipynb
models/: matt_micro_speech_quantized.tflite  matt_micro_speech_quantized_model_data.cc  matt_micro_speech_quantized_model_data.h  micro_speech_quantized_model_data.cc
testdata/: matt_down_1000ms_audio_data.cc  (+11 more)
train/: model.py  (+1 more)
(+304 files in other folders)
