[project]
name = "lab-2-micro-speech-v2-hartnettmatt"
version = "0.1.0"
description = "Matt Hartnett's work for Lab 2 of Embedded AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow",
    "tensorflow_datasets",
    "matplotlib",
    "seaborn>=0.13.2",
    "ipython>=9.6.0",
    "ipykernel>=6.30.1",
    "pip>=25.2",
]
