[project]
name = "final-project"
version = "0.1.0"
description = "Matt Hartnett's final project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cocotb<2.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
]
